Move border to li items to prevent overflowing and possibility to hide the border

--- a/src/styles/AllProjects.css
+++ b/src/styles/AllProjects.css
@@ -33,6 +33,7 @@ h1 {
 
 .all-projects li {
     display: block;
+    border: solid 0.2rem transparent; /* placeholder for animated border */
     width: 90%;
     max-width: 50rem;
     height: 25rem;
@@ -50,7 +51,6 @@ h1 {
     height: 100%;
     position: relative;
 
-    border: solid 0.2rem white; /* placeholder for animated border */
     box-shadow: 5px 5px 10px #00000020;
 }
 
